[package]
name = "hue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
eyre = "0.6.8"
dotenv = "0.15.0"
clap = { version = "3.1.18", features = ["derive"] }
serde_json = "1.0.81"
dirs = "4.0.0"
